<resources>
    <string name="app_name">Coloric</string>

    <string name="chooseColor">Choose Color</string>
    <string name="sendColor">Send Color</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="menu_bluetooth">Start Bluetooth</string>
    <string name="options">Options</string>
    <string name="brightness">Set Brightness</string>
    <string name="colorWheel">Color Wheel</string>
    <string name="colorGradient">Color Gradient</string>
    <string name="selectedColor">Selected Color</string>

    <string name="colorWhite">White</string>
    <string name="colorRed">Red</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGreen">Green</string>
    <string name="switchOff">Switch Off</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="readings">Readings</string>
    <string name="camera">CCTV</string>
    <string name="color">Color Chooser</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting...</string>
    <string name="strobe">Strobe</string>
    <string name="fade">Fade</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="temp_trend">Temperature Trend</string>
    <string name="humidity_trend">Humidity Trend</string>
    <string name="enable_disable_fingerprint">Enable/Disable Fingerprint</string>
    <string name="place_your_finger_on_the_scanner">Place your finger on the scanner</string>
</resources>
