<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/llBUttons">

                    <TextView
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold"
                            android:text="@string/colorWheel"/>

                </LinearLayout>

                <com.flask.colorpicker.ColorPickerView
                        android:id="@+id/clrPicker"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        app:wheelType="CIRCLE"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/llBUttons"
                        app:layout_constraintEnd_toStartOf="@id/clrPicker"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"/>

                <include
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/clrPicker"
                        app:layout_constraintBottom_toBottomOf="@id/clrPicker"
                        android:id="@+id/vwButtons"
                        layout="@layout/view_buttons_vert"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        />

                <LinearLayout
                        app:layout_constraintTop_toBottomOf="@id/clrPicker"
                        android:layout_width="match_parent"
                        android:id="@+id/llValues"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:visibility="gone"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold"
                            android:text="@string/brightness"/>

                    <SeekBar
                            android:visibility="gone"
                            android:id="@+id/skBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:max="255"
                            android:progress="100" />

                    <TextView
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold"
                            android:text="@string/selectedColor"/>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="8dp"
                            android:id="@+id/vwSelectedColor"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"/>

                    <TextView
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold"
                            android:text="@string/colorGradient"/>

                </LinearLayout>

                <uz.shift.colorpicker.LineColorPicker
                        app:layout_constraintTop_toBottomOf="@id/llValues"
                        android:id="@+id/lnColorPicker"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        app:orientation="horizontal"
                        app:colors="@array/rgbGradient"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp" />

                    <LinearLayout
                            app:layout_constraintTop_toBottomOf="@id/lnColorPicker"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:id="@+id/llStrobe"
                            android:layout_height="wrap_content">

                        <Button
                                android:layout_margin="4dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/btnStrobe"
                                android:textColor="@color/color_red"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textStyle="bold"
                                android:background="@color/white"
                                android:text="@string/strobe"
                                android:layout_weight="1"/>

                        <Button
                                android:layout_margin="4dp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/btnFade"
                                android:text="@string/fade"
                                android:textColor="@color/colorPrimary"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textStyle="bold"
                                android:background="@color/white"
                                android:layout_weight="1"/>

                    </LinearLayout>

                <Button
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/llStrobe"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:id="@+id/txConnectionStatus"
                        android:background="@color/white"
                        android:text="@string/disconnect"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</layout>