<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llTemp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/imgTemp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_temp"
                        android:tint="@color/colorPrimary"
                        android:layout_margin="5dp"/>

                <LinearLayout
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imgTemp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/llvTemp"
                        android:layout_margin="5dp"
                        android:layout_weight="9"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/txTemperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature"
                            android:textColor="@color/black"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llHum"
                    app:layout_constraintTop_toBottomOf="@id/llTemp"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/imgHum"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_hum"
                        android:tint="@color/colorPrimary"
                        android:layout_margin="5dp"/>

                <LinearLayout
                        android:id="@+id/llvHum"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imgHum"
                        android:layout_margin="5dp"
                        android:layout_weight="9"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/txHumidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/black"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintTop_toBottomOf="@+id/llHum"
                    android:id="@+id/llTempTrend"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_trend"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/txTempTrend"
                        android:textStyle="bold"/>

                <com.github.mikephil.charting.charts.BarChart
                        android:layout_marginTop="2dp"
                        app:layout_constraintTop_toBottomOf="@id/txTempTrend"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:id="@+id/brTemp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintTop_toBottomOf="@+id/llTempTrend"
                    android:id="@+id/llHumTrend"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_trend"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/txHumTrend"
                        android:textStyle="bold"/>

                <com.github.mikephil.charting.charts.BarChart
                        android:layout_marginTop="2dp"
                        app:layout_constraintTop_toBottomOf="@id/txHumTrend"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:id="@+id/brHum" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>